# rost

./: .gitignore  Cargo.lock.old  Cargo.toml  Dockerfile  README.md  a.out  assignment.asm  assignment.rost  bootstrap.rost  build.sh  compile.sh  debug.txt  hello.asm  input.rost  multiple.asm  out.asm  printf.asm  run-entrypoint.sh  run-release.sh  run-tests.sh  run.sh  run_docker.sh  test.rs  test.s  test.ssss  variables.asm
.github/workflows/: test.yml
src/: error.rs  lexer.rs  lexer_old.rs  main.rs  parser.rs
src/compiler/: array_index.rs  asm.rs  assignment.rs  builder.rs  code.rs  compiler.rs  declaration.rs  definition.rs  error.rs  expression.rs  function_call.rs  function_declaration.rs  mod.rs  (+11 more)
tests/: array_index.in  array_index.out  assignment.in  assignment.out  command_line_arg.in  command_line_arg.out  command_line_arg_loop.in  command_line_arg_optional.in  division.in  error_command_line_arg_too_many.in  error_command_line_arg_too_many.out  error_function.in  error_function.out  error_function_params.in  error_function_params.out  error_function_return.in  error_function_return.out  error_pointers.in  error_pointers.out  error_redeclared.in  error_redeclared.out  error_scope.in  error_scope.out  error_semicolon.in  error_semicolon.out  error_wrong_type.in  error_wrong_type.out  function.in  function.out  function_par_ref.in  function_par_ref.out  function_return.in  function_return.out  if.in  if.out  member_access.in  member_access.out  pointer_short.in  pointers.in  pointers.out  (+5 more)
tmp_tests/: function.in  function.out  function_return.in  pointers.in
(+66 files in other folders)
