[package]
name = "rost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
itertools = "0.10.2"

# Language server
actix-web = "4"
json = "0.12"
serde = { version = "1.0", features = ["derive"] }